force-app/main/default/objects/Nomination_Group__c/Nomination_Group__c.object-meta.xml
<CustomObject>
    <label>Nomination Group</label>
    <nameField>
        <label>Nomination Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Nomination Group</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>