force-app/main/default/objects/Nomination_Group__c/fields/Customer_Limit__c.field-meta.xml
<CustomField>
    <fullName>Customer_Limit__c</fullName>
    <label>Customer Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>