force-app/main/default/objects/Nomination_Group__c/fields/Live_ID__c.field-meta.xml
<CustomField>
    <fullName>Live_ID__c</fullName>
    <externalId>true</externalId>
    <label>Live ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>