force-app/main/default/objects/Nomination_Group__c/fields/Nom_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Nom_Group_Number__c</fullName>
    <label>Nom Group Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>