force-app/main/default/objects/Nomination_Group__c/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pipeline</label>
    <referenceTo>Pipeline__c</referenceTo>
    <relationshipLabel>Nomination Group</relationshipLabel>
    <relationshipName>Nomination_Group</relationshipName>
    <type>Lookup</type>
</CustomField>