force-app/main/default/objects/Nomination_Group__c/fields/Primary_Delivery_Point__c.field-meta.xml
<CustomField>
    <fullName>Primary_Delivery_Point__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Delivery Point</label>
    <referenceTo>Premises__c</referenceTo>
    <relationshipLabel>Nomination Groups (Delivery Point)</relationshipLabel>
    <relationshipName>Nomination_Group</relationshipName>
    <type>Lookup</type>
</CustomField>