force-app/main/default/objects/Nomination_Group__c/fields/Primary_Receipt_Point__c.field-meta.xml
<CustomField>
    <fullName>Primary_Receipt_Point__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Receipt Point</label>
    <referenceTo>Premises__c</referenceTo>
    <relationshipLabel>Nomination Groups (Receipt Point)</relationshipLabel>
    <relationshipName>Nomination_Group1</relationshipName>
    <type>Lookup</type>
</CustomField>