force-app/main/default/objects/Nomination_Group__c/fields/Utility__c.field-meta.xml
<CustomField>
    <fullName>Utility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utility</label>
    <referenceTo>TDSP__c</referenceTo>
    <relationshipLabel>Nomination Group</relationshipLabel>
    <relationshipName>Nomination_Group</relationshipName>
    <type>Lookup</type>
</CustomField>