force-app/main/default/objects/Nomination_Group__c/recordTypes/Pool.recordType-meta.xml
<RecordType>
    <fullName>Pool</fullName>
    <active>true</active>
    <label>Pool</label>
</RecordType>